--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2>Cậu yêu tớ có phải không nào ._.</h2>
-          <h4>Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :v </h4>
+          <h2>Hà yêu toi có phải không nào :<</h2>
+          <h4>Nếu Hà ko trả lời mà thoát ra tức là muốn làm vợ toi rùi đó nha :) </h4>
         </header>
-        <button id="yes" type="button" class="btn btn-danger btn-lg">Yêu ơi là yêuuuuuu <333 </button>
-        <button id="no" type="button" class="btn btn-info btn-lg">Cậu mơ à :333 </button>
+        <button id="yes" type="button" class="btn btn-danger btn-lg">Hí Hí Yêu ơi là yêuuuuuu <333 </button>
+        <button id="no" type="button" class="btn btn-info btn-lg">Ai cho nhấn không :3 đang mơ à bae </button>
       </div>
     </div>
     <audio src="./sound/sound.mp3" autoplay></audio>
