--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <h2>Hà yêu toi có phải không nào :<</h2>
           <h4>Nếu Hà ko trả lời mà thoát ra tức là muốn làm vợ toi rùi đó nha :) </h4>
         </header>
-        <button id="yes" type="button" class="btn btn-danger btn-lg">Hí Hí Yêu ơi là yêuuuuuu <333 </button>
-        <button id="no" type="button" class="btn btn-info btn-lg">Ai cho nhấn không :3 đang mơ à bae </button>
+        <button id="yes" type="button" class="btn btn-danger btn-lg">iu híu nhìu nhất <3 </button>
+        <button id="no" type="button" class="btn btn-info btn-lg">không iu :'( </button>
       </div>
     </div>
     <audio src="./sound/sound.mp3" autoplay></audio>
